# jwst-pdr-reduction

./: poetry_install_and_fix_dependencies.bash  pyproject.toml  readme.md
pdr_reduction/: create_association.py  extract_templates.py  nsclean_run.py  parallel_tools.py  pipeline_arguments.py  pipeline_run.py  pipeline_settings.py
pdr_reduction/intermediate_steps/: dq_do_not_use.py
shell_scripts/: cube_build_ch1wcs_orion.sh  mirifu.bash  mirifu_compare_bg.bash  nirspec.bash
target_options/: orion_cube_pa.json
