[tool.poetry]
name = "pdr-reduction"
version = "0.1.0"
description = "Tools for reducting JWST data from photodissociation region observations and similar programs"
authors = ["Dries Van De Putte <dvandeputte@stsci.edu>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
jwst = "^1.12.5"
scipy = "1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
