[tool.poetry]
name = "pdr-reduction"
version = "0.1.0"
description = "Tools for reducting JWST data from photodissociation region observations and similar programs"
authors = ["Dries Van De Putte <dvandeputte@stsci.edu>"]
license = "LICENSE"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
astropy = "^6.0.0"
crds = "^11.17.16"
dill = "^0.3.8"
jwst = "*"
multiprocess = "^0.70.16"
myastro = {git = "https://github.com/drvdputt/my-astro"}
pahfitcube = {git = "https://github.com/drvdputt/PAHFITcube"}
regions = "^0.8"
specutils = "^1.13.0"
pyqt6 = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_association = 'pdr_reduction.create_association:main'
pipeline = 'pdr_reduction.pipeline_run:main'
nsclean_run = 'pdr_reduction.nsclean_run:main'
